# ebaysdk-python

./: .pre-commit-config.yaml  pyproject.toml  setup.py
ebaysdk/: __init__.py  config.py  connection.py  exception.py  parallel.py  response.py  signature.py  utils.py
ebaysdk/finding/: __init__.py
ebaysdk/http/: __init__.py
ebaysdk/inventorymanagement/: __init__.py
ebaysdk/merchandising/: __init__.py
ebaysdk/policies/: __init__.py
ebaysdk/poller/: __init__.py  orders.py
ebaysdk/shopping/: __init__.py
ebaysdk/soa/: __init__.py  finditem.py
ebaysdk/trading/: __init__.py
samples/: calls_with_unicode.py  common.py  finding.py  finditem.py  merchandising.py  parallel.py  parallel_gevent.py  policies.py  poller.py  request_dictionary.py  shopping.py  storeMeta.py  t_http.py  test_perf.py  trading.py
tests/: test_base.py  test_errors.py  test_request.py
