[tool.poetry]
name = "ebaysdk"
version = "0.1.1"   
description = "eBay SDK for Python"
authors = [ "Tim Keefer" 
]
readme = "README.md"  
license =   "LICENSE"
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
]

[tool.poetry.dependencies]
python = "^3.8"
pynacl = "^1.5.0"
cryptography = "^42.0.7"
pycryptodome = "^3.20.0"
rsa = "^4.9"
lxml = "^5.2.1"





[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

